--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
                 </a>
                 <div class="nav-controls">
                     <a href="#converter" class="btn btn-secondary" title="Free Unit Converter Tool">Try Free Now</a>
-                    <button onclick="initiateUpgrade()" class="btn btn-primary" title="Professional Unit Converter Features">Upgrade to Pro →</button>
+                    <button onclick="window.open('https://buy.stripe.com/4gMdRbb4c9Ag9HM6lt7Vm09', '_blank')" style="background: #4F46E5; color: white; padding: 12px 24px; border: none; border-radius: 8px; font-weight: 600; cursor: pointer; text-decoration: none; display: inline-block;">Upgrade to Pro →</button>
                 </div>
             </div>
         </div>
@@ -684,7 +684,7 @@
                 </p>
                 <div class="hero-cta">
                     <a href="#converter" class="btn btn-hero-primary" title="Start Converting Units Now">Try Free Now</a>
-                    <button onclick="initiateUpgrade()" class="btn btn-hero-secondary" title="Professional Precision Calculator">Upgrade to Pro →</button>
+                    <button onclick="window.open('https://buy.stripe.com/4gMdRbb4c9Ag9HM6lt7Vm09', '_blank')" style="background: #4F46E5; color: white; padding: 12px 24px; border: none; border-radius: 8px; font-weight: 600; cursor: pointer; text-decoration: none; display: inline-block;">Upgrade to Pro →</button>
                 </div>
             </div>
         </div>
@@ -727,7 +727,7 @@
                         <option value="8">8 places 💎 PRO</option>
                         <option value="15">15 places 💎 PRO</option>
                     </select>
-                    <button class="btn btn-primary" onclick="initiateUpgrade()" style="font-size: 0.9rem;">🔓 Unlock Pro</button>
+                    <button onclick="window.open('https://buy.stripe.com/4gMdRbb4c9Ag9HM6lt7Vm09', '_blank')" style="background: #4F46E5; color: white; padding: 8px 16px; border: none; border-radius: 6px; font-weight: 600; cursor: pointer; text-decoration: none; display: inline-block; font-size: 0.9rem;">🔓 Unlock Pro</button>
                     <label style="display: flex; align-items: center; color: var(--text-primary);">
                         <input type="checkbox" id="scientificNotation" style="margin-right: 0.5rem;"> 🔬 Scientific Notation
                     </label>
@@ -776,7 +776,7 @@
                 <div class="result-actions" style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
                     <button class="btn" id="copyResult" style="background: var(--surface-color); color: var(--text-primary); border: 2px solid var(--border-color);">📋 Copy</button>
                     <button class="btn" id="favoriteBtn" style="background: var(--surface-color); color: var(--text-primary); border: 2px solid var(--border-color);">⭐ Favorite</button>
-                    <button class="btn" onclick="initiateUpgrade()" style="background: var(--surface-color); color: var(--text-primary); border: 2px solid var(--border-color);">📤 Export (Pro)</button>
+                    <button onclick="window.open('https://buy.stripe.com/4gMdRbb4c9Ag9HM6lt7Vm09', '_blank')" style="background: #4F46E5; color: white; padding: 8px 16px; border: none; border-radius: 6px; font-weight: 600; cursor: pointer;">📤 Export (Pro)</button>
                 </div>
             </div>
         </div>
@@ -865,7 +865,7 @@
                 </div>
             </div>
             <div style="text-align: center; margin-top: 3rem;">
-                <button onclick="initiateUpgrade()" class="btn btn-primary" title="Professional Unit Converter Features">See All Pro Features →</button> | <a href="#converter" style="color: var(--primary-color); text-decoration: none; margin-left: 1rem;" title="Free Unit Converter">Try Free Converter</a>
+                <button onclick="window.open('https://buy.stripe.com/4gMdRbb4c9Ag9HM6lt7Vm09', '_blank')" style="background: #4F46E5; color: white; padding: 12px 24px; border: none; border-radius: 8px; font-weight: 600; cursor: pointer; text-decoration: none; display: inline-block;">See All Pro Features →</button> | <a href="#converter" style="color: var(--primary-color); text-decoration: none; margin-left: 1rem;" title="Free Unit Converter">Try Free Converter</a>
             </div>
         </div>
     </section>
@@ -900,9 +900,7 @@
                     <p>Offline mode + privacy-first guarantee</p>
                 </div>
             </div>
-            <button class="btn" style="background: white; color: var(--primary-color); font-size: 1.1rem; padding: 1rem 2rem; border: none; border-radius: 0.5rem; cursor: pointer;" onclick="initiateUpgrade()">
-                Upgrade for $4.99/month →
-            </button>
+            <button onclick="window.open('https://buy.stripe.com/4gMdRbb4c9Ag9HM6lt7Vm09', '_blank')" style="background: #4F46E5; color: white; padding: 12px 24px; border: none; border-radius: 8px; font-weight: 600; cursor: pointer; text-decoration: none; display: inline-block;">Upgrade for $4.99/month →</button>
         </div>
     </section>
 
@@ -948,7 +946,7 @@
             </p>
             <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap; margin-top: 2rem;">
                 <a href="#converter" class="btn btn-primary" title="Free Unit Converter Calculator">Try Free Now</a>
-                <button onclick="initiateUpgrade()" class="btn btn-secondary" title="Professional Measurement Converter">Upgrade to Pro →</button>
+                <button onclick="window.open('https://buy.stripe.com/4gMdRbb4c9Ag9HM6lt7Vm09', '_blank')" style="background: #4F46E5; color: white; padding: 12px 24px; border: none; border-radius: 8px; font-weight: 600; cursor: pointer; text-decoration: none; display: inline-block;">Upgrade to Pro →</button>
             </div>
         </div>
     </section>
