--- a/index.html
+++ b/index.html
@@ -170,6 +170,10 @@
     }
     </script>
     
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8248403820035955"
+     crossorigin="anonymous"></script>
+    
     <!-- Google Analytics - Deferred Loading -->
     <script>
     window.addEventListener('load', function() {
