--- a/stone-to-pounds-converter-uk.html
+++ b/stone-to-pounds-converter-uk.html
@@ -35,6 +35,10 @@
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🇬🇧</text></svg>">
     
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8248403820035955"
+     crossorigin="anonymous"></script>
+    
     <!-- Enhanced Schema.org Structured Data -->
     <script type="application/ld+json">
     {
