--- a/scientific-unit-converter.html
+++ b/scientific-unit-converter.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-adsense-account" content="ca-pub-8248403820035955">
     
     <!-- Primary Meta Tags -->
     <title>Scientific Unit Converter: Complete Guide for Engineers & Scientists | PrecisionConvert.io</title>
